--- a/public/games/chase-you/config.json
+++ b/public/games/chase-you/config.json
@@ -34,5 +34,19 @@
       "respawnSec": 300,
       "stock": 1
     }
+  ],
+  "powerUps": [
+    {
+      "id": "pu_qqmr0l",
+      "title": "Jammed !",
+      "type": "signal_jammer",
+      "lat": 44.9778,
+      "lng": -93.265,
+      "pickupRadius": 180,
+      "payload": {
+        "durationSec": 60,
+        "effectRadiusMeters": 80
+      }
+    }
   ]
 }
