chore: update config.json via admin (chase-you)

--- a/public/games/chase-you/config.json
+++ b/public/games/chase-you/config.json
@@ -10,6 +10,10 @@
   "forms": {
     "players": 2
   },
+  "timer": {
+    "durationMinutes": 0,
+    "alertMinutes": 10
+  },
   "textRules": [],
   "powerups": [
     {
