--- a/public/config.json
+++ b/public/config.json
@@ -36,5 +36,5 @@
       "backgroundSize": "cover"
     }
   },
-  "gameOrigin": "http://localhost:4000"
+  "gameOrigin": "https://esxaperide.com"
 }
