--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "esx-admin-control-panel-map",
-  "version": "1.2.0",
+  "name": "esxape-monorepo",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p 3000"
-  },
-  "dependencies": {
-    "next": "14.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+  "workspaces": [
+    "apps/*"
+  ]
 }
