--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "node scripts/sync-data.cjs && next build",
-    "start": "next start -p 4000"
+    "start": "next start -p 4000",
+    "vercel-build": "node scripts/sync-data.cjs && next build"
   },
   "dependencies": {
     "next": "14.2.5",
