save root [draft]

--- a/public/draft/config.json
+++ b/public/draft/config.json
@@ -4,8 +4,8 @@
     "mode": "single"
   },
   "game": {
-    "title": "test",
-    "type": "Mystery"
+    "title": "mike",
+    "type": "Chase"
   },
   "forms": {
     "players": 1
