--- a/public/games/newbie/draft/config.json
+++ b/public/games/newbie/draft/config.json
@@ -15,5 +15,13 @@
     "alertMinutes": 10
   },
   "textRules": [],
-  "powerups": []
+  "powerups": [],
+  "theme": {
+    "fontFamily": "system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif",
+    "fontSize": 18,
+    "fontColor": "#ffffff",
+    "fontBg": "#00000080",
+    "screenBg": "#0b0c10",
+    "screenImg": ""
+  }
 }
