--- a/public/games/newbie/draft/config.json
+++ b/public/games/newbie/draft/config.json
@@ -18,6 +18,7 @@
   "powerups": [],
   "theme": {
     "fontFamily": "system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif",
+    "fontGF": null,
     "fontSize": 18,
     "fontColor": "#ffffff",
     "fontBg": "#00000080",
