--- a/public/games/newbie/draft/config.json
+++ b/public/games/newbie/draft/config.json
@@ -15,14 +15,35 @@
     "alertMinutes": 10
   },
   "textRules": [],
-  "powerups": [],
+  "powerups": [
+    {
+      "title": "Smoke Bomb 100/60 seconds",
+      "type": "smoke",
+      "pickupRadius": 100,
+      "effectSeconds": 60,
+      "lat": 44.9778,
+      "lng": -93.265,
+      "id": "p01"
+    }
+  ],
   "theme": {
     "fontFamily": "system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif",
     "fontGF": null,
     "fontSize": 18,
     "fontColor": "#ffffff",
-    "fontBg": "#00000080",
+    "fontColorOpacity": 1,
+    "fontBg": "#000000",
+    "fontBgOpacity": 0.5,
     "screenBg": "#0b0c10",
-    "screenImg": ""
+    "screenBgOpacity": 1,
+    "screenImg": "",
+    "screenImgOpacity": 1,
+    "textAlignV": "top"
+  },
+  "media": {
+    "thumbs": {
+      "rewards": {},
+      "utilities": {}
+    }
   }
 }
