--- a/public/games/newbie/draft/config.json
+++ b/public/games/newbie/draft/config.json
@@ -24,6 +24,15 @@
       "lat": 44.9778,
       "lng": -93.265,
       "id": "p01"
+    },
+    {
+      "title": "ROBOT",
+      "type": "clone",
+      "pickupRadius": 55,
+      "effectSeconds": 120,
+      "lat": 44.9778,
+      "lng": -93.265,
+      "id": "p02"
     }
   ],
   "theme": {
