save(draft config): newbie

--- a/public/games/newbie/draft/config.json
+++ b/public/games/newbie/draft/config.json
@@ -53,7 +53,8 @@
     "thumbs": {
       "rewards": {},
       "utilities": {
-        "smoke": "https://drive.google.com/open?id=1icvwZ3Bow3HGrmVve1LUUv_6b2Gkwq7h&usp=drive_fs"
+        "smoke": "https://drive.google.com/open?id=1icvwZ3Bow3HGrmVve1LUUv_6b2Gkwq7h&usp=drive_fs",
+        "clone": "https://drive.google.com/open?id=1RE5VPX5HAajvkT1zkO9J_5sOkKgwRFOv&usp=drive_fs"
       }
     }
   }
