--- a/game/public/games/newbie/config.json
+++ b/game/public/games/newbie/config.json
@@ -15,14 +15,47 @@
     "alertMinutes": 10
   },
   "textRules": [],
-  "powerups": [],
+  "powerups": [
+    {
+      "title": "Smoke Bomb 100/60 seconds",
+      "type": "smoke",
+      "pickupRadius": 100,
+      "effectSeconds": 60,
+      "lat": 44.9778,
+      "lng": -93.265,
+      "id": "p01"
+    },
+    {
+      "title": "ROBOT",
+      "type": "clone",
+      "pickupRadius": 55,
+      "effectSeconds": 120,
+      "lat": 44.9778,
+      "lng": -93.265,
+      "id": "p02"
+    }
+  ],
   "theme": {
     "fontFamily": "system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif",
     "fontGF": null,
     "fontSize": 18,
     "fontColor": "#ffffff",
-    "fontBg": "#00000080",
+    "fontColorOpacity": 1,
+    "fontBg": "#000000",
+    "fontBgOpacity": 0.5,
     "screenBg": "#0b0c10",
-    "screenImg": ""
+    "screenBgOpacity": 1,
+    "screenImg": "",
+    "screenImgOpacity": 1,
+    "textAlignV": "top"
+  },
+  "media": {
+    "thumbs": {
+      "rewards": {},
+      "utilities": {
+        "smoke": "https://drive.google.com/open?id=1icvwZ3Bow3HGrmVve1LUUv_6b2Gkwq7h&usp=drive_fs",
+        "clone": "https://drive.google.com/open?id=1RE5VPX5HAajvkT1zkO9J_5sOkKgwRFOv&usp=drive_fs"
+      }
+    }
   }
 }
