--- a/game/public/games/newbie/draft/config.json
+++ b/game/public/games/newbie/draft/config.json
@@ -15,35 +15,7 @@
     "alertMinutes": 10
   },
   "textRules": [],
-  "powerups": [
-    {
-      "title": "Smoke Bomb 100/60 seconds",
-      "type": "smoke",
-      "pickupRadius": 100,
-      "effectSeconds": 60,
-      "lat": 44.9778,
-      "lng": -93.265,
-      "id": "p01"
-    },
-    {
-      "title": "ROBOT",
-      "type": "clone",
-      "pickupRadius": 55,
-      "effectSeconds": 120,
-      "lat": 44.9778,
-      "lng": -93.265,
-      "id": "p02"
-    },
-    {
-      "title": "ROBOT",
-      "type": "clone",
-      "pickupRadius": 55,
-      "effectSeconds": 120,
-      "lat": 44.9778,
-      "lng": -93.265,
-      "id": "p03"
-    }
-  ],
+  "powerups": [],
   "theme": {
     "fontFamily": "system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif",
     "fontGF": null,
@@ -61,10 +33,7 @@
   "media": {
     "thumbs": {
       "rewards": {},
-      "utilities": {
-        "smoke": "https://drive.google.com/open?id=1icvwZ3Bow3HGrmVve1LUUv_6b2Gkwq7h&usp=drive_fs",
-        "clone": "https://drive.google.com/open?id=1RE5VPX5HAajvkT1zkO9J_5sOkKgwRFOv&usp=drive_fs"
-      }
+      "utilities": {}
     }
   }
 }
