--- a/public/games/secret-agent-paws/draft/config.json
+++ b/public/games/secret-agent-paws/draft/config.json
@@ -19,7 +19,18 @@
   "powerups": [],
   "media": {},
   "icons": {
-    "missions": [],
+    "missions": [
+      {
+        "key": "missions-1",
+        "name": "",
+        "url": ""
+      },
+      {
+        "key": "missions-2",
+        "name": "",
+        "url": ""
+      }
+    ],
     "devices": [],
     "rewards": []
   },
