--- a/public/games/newbie/draft/config.json
+++ b/public/games/newbie/draft/config.json
@@ -15,25 +15,24 @@
     "alertMinutes": 10
   },
   "textRules": [],
+  "devices": [],
   "powerups": [],
-  "theme": {
-    "fontFamily": "system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif",
-    "fontGF": null,
-    "fontSize": 18,
-    "fontColor": "#ffffff",
-    "fontColorOpacity": 1,
-    "fontBg": "#000000",
-    "fontBgOpacity": 0.5,
-    "screenBg": "#0b0c10",
-    "screenBgOpacity": 1,
-    "screenImg": "",
-    "screenImgOpacity": 1,
-    "textAlignV": "top"
+  "media": {},
+  "icons": {
+    "missions": [],
+    "devices": [],
+    "rewards": []
   },
-  "media": {
-    "thumbs": {
-      "rewards": {},
-      "utilities": {}
-    }
+  "appearance": {
+    "fontFamily": "system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif",
+    "fontSizePx": 22,
+    "fontColor": "#ffffff",
+    "textBgColor": "#000000",
+    "textBgOpacity": 0,
+    "screenBgColor": "#000000",
+    "screenBgOpacity": 0,
+    "screenBgImage": "",
+    "textAlign": "center",
+    "textVertical": "top"
   }
 }
