--- a/game/public/games/secret-agent-paws/config.json
+++ b/game/public/games/secret-agent-paws/config.json
@@ -17,9 +17,7 @@
   "textRules": [],
   "devices": [],
   "powerups": [],
-  "media": {
-    "pool": []
-  },
+  "media": {},
   "icons": {
     "missions": [],
     "devices": [],
