save config (secret-agent-paws)

--- a/public/games/secret-agent-paws/draft/config.json
+++ b/public/games/secret-agent-paws/draft/config.json
@@ -57,6 +57,11 @@
         "key": "missions-1",
         "name": "",
         "url": "/media/icons/1759674089958-sIGNAL_jAMMER.jpg"
+      },
+      {
+        "key": "missions-2",
+        "name": "",
+        "url": ""
       }
     ],
     "devices": [],
